--- a/templates/edit-account.html
+++ b/templates/edit-account.html
@@ -22,33 +22,31 @@
                 </div>
                 <ul>
                     <!-- <label for="test">Your name: </label> -->
-                    <li>email: {{ my_account.email }}</li><button id="" type="submit"><h3>Commit</h3></button>
-                    <li><span>Password:</span>
-                        <input id="" type="text" name="password" value="{{ my_account.password }}">
-                    </li>
+                    <li>Email: {{ user_account.email }}   |   <span>Password:</span><input id="" type="text" name="password" value="{{ user_account.password }}"></li>
+                    <li><button id="" type="submit"><h3>Commit</h3></button></li>
                     <li><span>UserName :</span>
-                        <input id="" type="text" name="user_name" value="{{ my_account.user_name }}">
+                        <input id="" type="text" name="user_name" value="{{ user_account.user_name }}">
                     </li>
                     <li><span>FirstName :</span>
-                        <input id="" type="text" name="first_name" value="{{ my_account.first_name }}">
+                        <input id="" type="text" name="first_name" value="{{ user_account.first_name }}">
                     </li>
                     <li><span>LastName :</span>
-                        <input id="" type="text" name="last_name" value="{{ my_account.last_name }}">
+                        <input id="" type="text" name="last_name" value="{{ user_account.last_name }}">
                     </li>
                     <li><span>Address :</span>
-                        <input id="" type="text" name="address" value="{{ my_account.address }}">
+                        <input id="" type="text" name="address" value="{{ user_account.address }}">
                     </li>
                     <li><span>Street :</span>
-                        <input id="" type="text" name="street" value="{{ my_account.street }}">
+                        <input id="" type="text" name="street" value="{{ user_account.street }}">
                     </li>
                     <li><span>City :</span>
-                        <input id="" type="text" name="city" value="{{ my_account.city }}">
+                        <input id="" type="text" name="city" value="{{ user_account.city }}">
                     </li>
                     <li><span>Country :</span>
-                        <input id="" type="text" name="country" value="{{ my_account.country }}">
+                        <input id="" type="text" name="country" value="{{ user_account.country }}">
                     </li>
                     <li><span>Code :</span>
-                        <input id="" type="text" name="code" value="{{ my_account.code }}">
+                        <input id="" type="text" name="code" value="{{ user_account.code }}">
                     </li>
                 </ul>
             </form>
