--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -19,20 +19,20 @@
                     <h1>MyAccount</h1>
                     <li><a href="myAccount&=edit">Edit Account</a></li>
                     <!-- <li>login_status: {{ user_status }}</li> -->
-                    <li>email: {{ my_account.email }}</li>
-                    <li>passWord: {{ my_account.password }}</li>
-                    <li>UserName: {{ my_account.user_name }}</li>
-                    <li>FirstName: {{ my_account.first_name }}</li>
-                    <li>LastName: {{ my_account.last_name }}</li>
-                    <li>Address: {{ my_account.address }}</li>
-                    <li>Street: {{ my_account.street }}</li>
-                    <li>City: {{ my_account.city }}</li>
-                    <li>Country: {{ my_account.country }}</li>
-                    <li>Code: {{ my_account.code }}</li>
+                    <li>email: {{ user_account.email }}</li>
+                    <!-- <li>PassWord: {{ my_account.password }}</li> -->
+                    <li>UserName: {{ user_account.user_name }}</li>
+                    <li>FirstName: {{ user_account.first_name }}</li>
+                    <li>LastName: {{ user_account.last_name }}</li>
+                    <li>Address: {{ user_account.address }}</li>
+                    <li>Street: {{ user_account.street }}</li>
+                    <li>City: {{ user_account.city }}</li>
+                    <li>Country: {{ user_account.country }}</li>
+                    <li>Code: {{ user_account.code }}</li>
                     <li><a href="logout">Logout</a></li>
                 </ul>
             </div>
-            <div>aaa</div>
+            <div>COMING SOON...</div>
 
         </div>
 
