--- a/templates/nav.html
+++ b/templates/nav.html
@@ -23,7 +23,7 @@
         <div class="account flex-container">
             <ul>
             {% if user_status %}
-            <li><a href="{{ nav_account.myAccount.0 }}">{{ user_email }}</a></li>
+            <li><a href="{{ nav_account.myAccount.0 }}">{{ user_name }}</a></li>
             <!-- <div><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></div> -->
             <li><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></li>
             {% else %}
