--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -32,7 +32,9 @@
                     <li><a href="logout">Logout</a></li>
                 </ul>
             </div>
-            <div>COMING SOON...</div>
+            <div>COMING SOON...
+                
+            </div>
 
         </div>
 
