--- a/templates/done.html
+++ b/templates/done.html
@@ -14,11 +14,11 @@
         <!-- commit listing data done -->
         {% if account_create %}
         <div class="container">
-            <div style="margin: 20px 0 20px 0;"><h1>{{ tips }}</h1></div>
+            <div style="margin: 20px 0 20px 0;"><h1>{{ tip }}</h1></div>
             
             <div style="margin: 20px 0 20px 0;">
                 <a style="font-size: 20px;" href="{{ products }}" target="_blank">Shopping</a> | 
-                <a style="font-size: 20px;" href="{{ admin }}">Check Aount</a>
+                <a style="font-size: 20px;" href="{{ nav_account.myAccount.0 }}">Check Account:  {{ user_name }}</a>
             </div>
             <div><img src="{{ img }}" alt=""></div>
         </div>
