--- a/templates/create-coupon.html
+++ b/templates/create-coupon.html
@@ -24,6 +24,12 @@
                     <li><a href="{{ nav_admin.Coupon }}"><h3>< back coupon</h3></a><button id="" type="submit"><h3>Commit</h3></button></li>
                     <li>Title: <input id="" type="text" name="code" value="{{ Hello_world }}"></li>
                     <li>Code: <input id="" type="text" name="code" value="{{ Hello_world }}"></li>
+                    <li>asin: </li>
+                    <li>Cash: <input id="" type="text" name="code" value="{{ Hello_world }}"></li>
+                    <li>Percentage: <input id="" type="text" name="code" value="{{ Hello_world }}">%</li>
+                    <li>Start at: <input id="" type="text" name="code" value="{{ Hello_world }}"></li>
+                    <li>End at: <input id="" type="text" name="code" value="{{ Hello_world }}"></li>
+                    <li>Status: <input id="" type="text" name="code" value="{{ Hello_world }}"></li>
                 </ul>
             </form>
 
