--- a/templates/head.html
+++ b/templates/head.html
@@ -20,3 +20,4 @@
 <!-- Js -->
 <script src="/static/js/base.js" defer="defer"></script>
 <script src="/static/js/account.js" defer="defer"></script>
+<!-- <script src="/static/js/price.js" defer="defer"></script> -->
