--- a/templates/index.html
+++ b/templates/index.html
@@ -45,23 +45,23 @@
 
         <div class="container grid-container products-shelf">
             <div class="margin-around">
-                <div><a href="products/{{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
+                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
                 <div>$<b>{{ product_info.5.price }}</b></div>
             </div>
             <div class="margin-around">
-                <div><a href="products/{{ product_info.6.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.6.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3">{{ product_info.6.title }}</a></div>
+                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.6.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3">{{ product_info.6.title }}</a></div>
                 <div>$<b>{{ product_info.6.price }}</b></div>
             </div>
             <div class="margin-around">
-                <div><a href="products/{{ product_info.7.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.7.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.7.asin }}{{ includ_user_id_url }}" title="{{ product_info.7.title }}" class="display-row-3">{{ product_info.7.title }}</a></div>
+                <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.7.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}" title="{{ product_info.7.title }}" class="display-row-3">{{ product_info.7.title }}</a></div>
                 <div>$<b>{{ product_info.7.price }}</b></div>
             </div>
             <div class="margin-around">
-                <div><a href="products/{{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
+                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
                 <div>$<b>{{ product_info.8.price }}</b></div>
             </div>
         </div>
