--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -29,6 +29,7 @@
                     <li>City: {{ user_account.city }}</li>
                     <li>Country: {{ user_account.country }}</li>
                     <li>Code: {{ user_account.code }}</li>
+                    {{tzname}}
                     <li><a href="logout">Logout</a></li>
                 </ul>
             </div>
