--- a/static/css/main.css
+++ b/static/css/main.css
@@ -218,4 +218,13 @@ footer *
 }
 
 
-
+.text-overflow{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.three-line{
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+}
