--- a/templates/edit-coupon.html
+++ b/templates/edit-coupon.html
@@ -13,10 +13,17 @@
     <div class="wrap">
 
         <div class="container">
-            <a href="{{ nav_admin.Coupon }}=create">Create Coupon</a>
+            <a href="{{ nav_admin.Coupon }}=create"><h3>Create Coupon</h3></a><a style="font-size: 20px;" href="{{ nav_admin.Dashboard }}"><h3>< Back to Manager</h3></a>
             <ul>
                 <li>Title: Apply 20% coupon</li>
                 <li>Code: B0BTXB89PGFM318UI</li>
+                <li>asin: B0BTXB89PG | ALL | ['B0BTXB89PG','B0BTXB89PG']</li>
+                <li>Cash: $ 5.00</li>
+                <li>Percentage: 20%</li>
+                <li>Created at: 20231102</li>
+                <li>Start at: 20231102</li>
+                <li>End at: 20231202</li>
+                <li>Status: Run | Invalid</li>
             </ul>
 
         </div>
