--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,6 +18,6 @@
         <div></div>
     </div>
     <div class="container padding-b">
-        Copyright © 2020-2023 3.9Kr Inc. All rights reserved. 
+        Copyright © 2020-{{ timezone.date.year }} 3.9Kr Inc. All rights reserved. 
     </div>
 </footer>
