--- a/templates/manager-product-list.html
+++ b/templates/manager-product-list.html
@@ -12,7 +12,7 @@
     <div class="wrap">
         <br>
         <div class="container">
-            <h3><a style="font-size: 20px;" href="{{ admin }}">< Back to Manager</a></h3>
+            <h3><a style="font-size: 20px;" href="{{ nav_admin.Dashboard }}">< Back to Manager</a></h3>
         </div>
         <!-- {% for title in listing %}
         <div class="container grid">
