--- a/templates/edit-listing.html
+++ b/templates/edit-listing.html
@@ -22,7 +22,7 @@
         {%csrf_token%}
         <div class="wrap">
             <br>
-            <div class="container products-shelf">
+            <div class="container">
                 <h3><b>{{ asin }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="font-size: 20px;" href="{{ edit_listing }}">< Back to editList</a></h3><br>
                 <b>price: </b><input style="font-size: 18px;" type="text" name="price" id="" value="{{ listing.price }}" />
                 <b>status: </b><input style="font-size: 18px;" type="text" name="status" id="" value="{{ listing.status }}" />
@@ -32,20 +32,21 @@
                 <!-- <label>{{ status }}</label> -->
             </div>
             <br>
-            <div class="container products-shelf">
+            <div class="container">
                 <h3><b>Title</b></h3>
                 <textarea style="font-size: 18px;" name="title" id="" cols="130" rows="3">{{ listing.title }}</textarea>
             </div>
             <br>
-            <div class="container products-shelf">
-                <h3><b>BulletPoint</b></h3>
+            <div class="container">
+                <!-- <h3><b>BulletPoint</b></h3> -->
                 {% for bp in bullet_point %}
-                <textarea style="font-size: 18px;" name="bullet_point_{{ forloop.counter }}" id="" cols="130" rows="3">{{ bp }}</textarea> -- {{ forloop.counter }}
+                <div><b>BulletPoint--{{ forloop.counter }}</b></div>
+                <textarea style="font-size: 18px;" name="bullet_point_{{ forloop.counter }}" id="" cols="130" rows="3">{{ bp }}</textarea>
                 <br>
                 {% endfor %}
             </div>
             <br>
-            <div class="container products-shelf">
+            <div class="container">
                 <h3><b>Description</b></h3>
                 <textarea style="font-size: 18px;" name="description" id="" cols="130" rows="15">{{ listing.description }}</textarea>
             </div>
