account.html update

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
     <!-- module img left text right -->
     <div class="wrap">
-        <div class="container grid" style="padding: 10% 0;">
+        <div class="container grid-container" style="padding: 10% 0;">
             <div style="height: 500px; text-align: center;"><img src="{{ first_img.0.first_img }}" style="width: auto; height: 100%;" alt=""></div>
             <div style="height: 100%; padding: 10%;">
                 <div style="margin-bottom: 3%;"><h1>Ceramic Hamsa Hand Incense Holder</h1></div>
