--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -30,7 +30,7 @@ wrap > container > grid
 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .container img 
@@ -54,6 +54,11 @@ wrap > container > grid
   height: 30px;
 }
 
+/* .flex-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+} */
 
 
 /* 
@@ -87,7 +92,7 @@ wrap > container > grid
   {
     display: grid;
     /* grid-gap: 8% 2%; */
-    grid-gap: 2%;
+    /* grid-gap: 2%; */
     grid-template-columns: repeat(auto-fit, minmax(300px, auto));
     grid-template-rows: auto;
     margin-top: 3%;
